--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,13 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+:root {
+  --accent-color: #90D1FF; 
+}
+
 body {
   font-family: "Rubik", sans-serif;
 }
@@ -11,7 +21,4 @@ h6 {
   font-family: "Rubik Mono One", sans-serif;
 }
 
-.small {
-  font-weight: 300;
-  font-style: italic;
-}
+
