updated css on 404

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -37,6 +37,8 @@ h6 {
 
 .four_zero_four_bg {
   background-image: url(https://cdn.dribbble.com/users/285475/screenshots/2083086/dribbble_1.gif);
+  background-repeat: no-repeat;
+  background-size: contain;
   height: 400px;
   background-position: center;
 }
