--- a/client/src/App.css
+++ b/client/src/App.css
@@ -21,6 +21,19 @@ h6 {
   font-family: "Rubik Mono One", sans-serif;
 }
 
+/* heartbeat animation */
+@keyframes heartbeat {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.3);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
 /*======================
     404 page css
 =======================*/
