--- a/client/src/App.css
+++ b/client/src/App.css
@@ -49,7 +49,7 @@ h6 {
 }
 
 .four_zero_four_bg {
-  background-image: url(https://cdn.dribbble.com/users/285475/screenshots/2083086/dribbble_1.gif);
+  background-image: url(https://media.giphy.com/media/VV1qFLfUAYcaYz4CSH/giphy.gif);
   background-repeat: no-repeat;
   background-size: contain;
   height: 400px;
