--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,23 +2,18 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-}
+   font-family: 'Lora', serif;
+  }
 
 :root {
   --accent-color: #90d1ff;
 }
 
 body {
-  font-family: "Rubik", sans-serif;
+ font-family: 'Lora', serif;
 }
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-family: "Rubik Mono One", sans-serif;
+h1, h2, h3, h4, h5, h6 {
+   font-family: 'Lora', serif;
 }
 
 /* heartbeat animation */
